src/components/Search/Search.scss
@import "../../styles/variables";

.search-wrapper {
  position: relative;
  margin: 0rem 4rem 0rem 4rem;
}

.search-title {
  display: flex;
  font-family: $primary-font;
  color: $primary-font-color;
  font-weight: 700;
  font-size: 2rem;
  margin: 2rem 0rem 1.3rem 0rem;
  justify-content: center;
}

/* Styling for buttons */
.search-buttons-container {
  display: flex;
  justify-content: center;
  margin-bottom: 2.4rem;

  .search-button-1,
  .search-button-2,
  .search-button-3 {
    font-family: $primary-font;
    font-weight: 700;
    font-size: 1.2rem;
    outline: none;
    cursor: pointer;
    color: $primary-font-color;
    background-color: transparent;
    border: 0.0625rem /* 1px */ solid $secondary-color;
    border-radius: 0.25rem; /* 4px */
    padding: 0.3rem 1.2rem 0.3rem 1.2rem;
    transition: 0.3s;
    display: flex;
    align-items: center;

    &:hover {
      background-color: $secondary-color;
      color: $secondary-font-color;

      .total {
        background-color: $primary-color;
        color: $primary-font-color;
        transition: 0.3s;
      }
    }
  }
}

.search-button-2 {
  margin-left: 1.3rem;
  margin-right: 1.3rem;
}

.search-hr-container {
  flex: 1;
  display: flex;
  align-items: center;

  .search-hr {
    flex: 1;
    border: 0;
    height: 0;
    border-top: 0.0625rem /* 1px */ solid $tertiary-color;
    opacity: 0.1;
  }
}

.search-container {
  display: grid;
  justify-content: space-evenly;
  column-gap: 3rem;
  row-gap: 5rem;
  grid-template-columns: repeat(auto-fit, minmax(8rem, 16rem));
  margin-bottom: 3rem;
}

.search-item {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  text-decoration: none;
  transition: 0.2s;

  &:hover {
    transform: scale(1.025);
  }

  .search-item-title {
    font-family: $primary-font;
    color: $primary-font-color;
    font-size: 1rem;
    font-weight: 700;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 1.25rem; /* 20px */
  }
}

.search-img {
  background-color: #181818;
  box-shadow: 0.375rem 0.5625rem 1.1875rem 0.0625rem /* 6px 9px 19px 1px */
    rgba(0, 0, 0, 0.4);
  border-radius: 1rem; /* 16px */
  height: 23rem;
  width: 100%;
}

.search-img-placeholder {
  background-color: #181818;
  box-shadow: 0.375rem 0.5625rem 1.1875rem 0.0625rem /* 6px 9px 19px 1px */
    rgba(0, 0, 0, 0.4);
  border-radius: 1rem; /* 16px */
  height: 23rem;
  width: 100%;
  box-sizing: border-box;
  padding: 1.3rem;
}

.total {
  margin-left: 0.5rem;
  font-size: 0.9rem;
  color: $secondary-font-color;
  border-radius: 8px;
  padding: 0rem 0.4rem 0rem 0.4rem;
  background-color: $secondary-color;
  transition: 0.3s;
}

